--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <button onclick="window.location.href='https://www.discord.com'">Discord</button>
     <button onclick="window.location.href='https://www.x.com'">Twitter</button>
     <h2>Secondary Bookmarks</h2>
-    <button onclick="window.location.href='https://www.dribble.com'"></button>>Dribble</button>
+    <button onclick="window.location.href='https://www.dribble.com'">Dribble</button>
     <button onclick="window.location.href='https://www.medium.com'">Medium</button>
     
+    <script src="script.js"></script>
     
 </body>
 </html>
